--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-props (0.9.14-1) UNRELEASED; urgency=low
+props (0.10.1-1) neurodebian; urgency=low
 
   * Initial release.
 
- -- Michael Hanke <mih@debian.org>  Wed, 05 Apr 2017 19:58:43 +0200
+ -- Michael Hanke <mih@debian.org>  Thu, 27 Apr 2017 11:15:40 +0200
