--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+fsleyes-props (1.2.1-2) UNRELEASED; urgency=medium
+
+  * debian/copyright
+    - pointed to upstream location
+  * debian/control
+    - provided Vcs- fields
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 30 Mar 2018 09:00:44 -0400
+
 fsleyes-props (1.2.1-1) neurodebian; urgency=medium
 
   * New upstream release (missed many before)
